--- a/content/css/site.css
+++ b/content/css/site.css
@@ -1,4 +1,18 @@
 footer a {
-    color: inherit;
-    text-decoration-style: none;
+    color: rgba(255, 255, 255, 0.75);
+}
+
+footer a:hover {
+    color: rgba(255, 255, 255, 1);
+}
+
+app {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+}
+
+ng-view {
+    flex: 1;
 }
